objects/GEMS_Membership_Data__c.object
<CustomObject>
    <description>Custom object to hold data related to Membership case</description>
    <fields>
        <fullName>DPY_Processing__c</fullName>
        <label>DPY Processing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Actual_Date_for_Production_File__c</fullName>
        <label>Actual Date for Production File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Date_Discrepancies_Sent__c</fullName>
        <description>Capture additional production OE File data for Membership case</description>
        <label>Date Discrepancies Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Date_of_First_DPY_File__c</fullName>
        <description>Capture additional production OE File data for Membership case</description>
        <label>Date of First DPY File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_File_Rejected_Dueto_PendAcctStruct__c</fullName>
        <description>Capture additional production OE File data for Membership case</description>
        <label>File Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Initial_File_Receipt_Date__c</fullName>
        <description>Capture additional production OE File data for Membership case</description>
        <label>Initial File Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_MRKT_OSS_Notified_of_Completion__c</fullName>
        <description>Capture additional production OE File data fro Membership case</description>
        <label>MRKT/OSS Notified of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Parent_Membership_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Membership Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Membership File Data</relationshipLabel>
        <relationshipName>GEMS_Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEMS_Requested_Retro_Report_Date_Added__c</fullName>
        <description>Capture additional production OE File data for Membership case</description>
        <label>Requested Retro Report Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Requested_Retro_Report_Date_Removed__c</fullName>
        <description>Capture additional production OE File data for Membership case</description>
        <label>Requested Retro Report Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Target_Date_for_Production_File__c</fullName>
        <label>Target Date for Production File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Current_Year_Prod_File_Expected__c</fullName>
        <label>Last Current-Year Prod File Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_Passed_On_File__c</fullName>
        <label>Terms Passed On File?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Membership File Data</label>
    <nameField>
        <displayFormat>MN-{00000}</displayFormat>
        <label>Reference#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership File Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>